# rust-ollama

./: .gitignore  Cargo.toml
_mock-data/: for-embeddings.txt
examples/: ch01-simple.rs  ch02-context.rs  ch03-chat.rs  ch04-embeddings.rs
src/: lib.rs
