[package]
name = "xp-ollama" # Renamed from "rust-ollama"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"       # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# tokio-stream = { version = "0.1.14", optional = true }
# -- Async Streaming
futures = "0.3"
# -- Ollama
ollama-rs = { version = "0.1", features = ["stream"] }
# -- Files
simple-fs = { version = "0.1", features = ["full"] }
# -- Others
derive_more = { version = "1.0.0-beta", features = ["from"] }
